Implement automatic updating of styles

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 	<template shadowrootmode="open">
 		<adopt-styles adopt="all"></adopt-styles>
 		<p class="inline">Inline</p>
+		<p class="layer">Layer</p>
 		<p class="linked">Linked</p>
 	</template>
 </my-component>
